// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an empty exercise 1`] = `
<div>
  <section />
</div>
`;

exports[`renders an exercise 1`] = `
.c0 {
  font-family: "Courier New";
}

.c1 {
  background-color: yellow;
  -webkit-animation-name: jemkry;
  animation-name: jemkry;
  -webkit-animation-duration: 8s;
  animation-duration: 8s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

<div>
  <section>
    <span
      class="c0 c1"
    >
      a
    </span>
    <span
      class="c0"
    >
      b
    </span>
  </section>
</div>
`;

exports[`renders an exercise 2`] = `
.c0 {
  font-family: "Courier New";
}

.c1 {
  background-color: lightgreen;
}

.c2 {
  background-color: red;
}

<div>
  <section>
    <span
      class="c0 c1"
    >
      a
    </span>
    <span
      class="c0 c2"
    >
      b
    </span>
  </section>
</div>
`;
